--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -857,7 +857,8 @@ li, i,
   .media a a .fa {
     padding-right: 10px;
     color: #fff;
-    line-height: 2rem; }
+    line-height: 2rem;
+    font-size: 1.25rem; }
 
 .hour-info p {
   color: #fff; }
